tests/testcases/errors/BCE0126-1.boo
"""
BCE0126-1.boo(7,8): BCE0126: It is not possible to evaluate an expression of type 'void'.
"""
def foo() as void:
	pass
	
i = foo()
